\textsubscript support from Michal, https://puszcza.gnu.org.ua/bugs/?262
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@155 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,11 @@
+2015-09-29  Michal Hoftich  <michal.h21@gmail.com>
+
+	* tex4ht-ooffice.tex (configure ooffice subscript),
+	* tex4ht-4ht.tex (subscript.4ht),
+	* tex4ht-html4.tex (configure html4 subscript):
+	support for \textsubscript.  http://puszcza.gnu.org.ua/bugs/?262
+	* Makefile (derived): add subscript.4ht.
+
 2015-08-05  Michal Hoftich  <michal.h21@gmail.com>
         and Karl Berry <karl@gnu.org>
 
