--- a/lit/tex4ht-html4.tex
+++ b/lit/tex4ht-html4.tex
@@ -5495,6 +5495,11 @@ An alternative css-based approach:
   {\egroup \HCode{</sup>}}
 >>>
 
+\<configure html4 subscript\><<<
+\Configure{textsubscript}
+  {\HCode{<sub class="textsubscript">}\bgroup\small}
+  {\egroup \HCode{</sub>}}
+>>>
 
 %%%%%%%%%%%%%%%%
 \section{Floats}
