--- a/lit/tex4ht-4ht.tex
+++ b/lit/tex4ht-4ht.tex
@@ -9439,6 +9439,31 @@ active character.
 The definition of \`'\@textsuperscript' in latex2e uses feartures not
 available in latex209.
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\SubSection{Subscripts}
+
+This is a variant of textsuperscript.
+
+\<subscript.4ht\><<<
+\def\:temp#1{%
+   {\m@th\ensuremath{_{\mbox{\fontsize\sf@size\z@#1}}}}}
+\ifx \@textsubscript\:temp
+  \def\:tempc#1{{\m@th%
+     \ifmmode {\HCode{}}\sb {\mbox{\fontsize\sf@size\z@#1}}%
+     \else%
+        \a:textsubscript%
+           {\mbox{#1}}\b:textsubscript%
+     \fi }}
+  \HLet\@textsubscript\:tempc
+\fi
+\NewConfigure{textsubscript}{2}
+\Configure{textsubscript}
+   {$\relax{\HCode{}}\sb}
+   {$}
+\Hinput{subscript}
+\endinput
+>>>  \AddFile{9}{subscript}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \Section{subfigure.sty}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
