--- a/lit/tex4ht-fonts-modern.tex
+++ b/lit/tex4ht-fonts-modern.tex
@@ -1,4 +1,10 @@
-
+% $Id$
+% Copyright 2009-2015 TeX Users Group
+% Copyright 1997-2009 Eitan M. Gurari
+% Released under LPPL 1.3c+.
+% See tex4ht-cpright.tex for license text.
+% 
+% Included from tex4ht-fonts-noncjk.tex, not run on its own.
 
 %%%%%%%%%%%%%
 \Section{{LM}}
