--- a/lit/tex4ht-fonts-noncjk.tex
+++ b/lit/tex4ht-fonts-noncjk.tex
@@ -51382,253 +51382,253 @@ lacc 0 255
 
 \<tcrm-uni\><<<
 tcrm 0 246
-'&#x0060;' ''              0 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-'&#x00B4;' ''   r-quote(?) 1 % tcrm.htf (unicode)            `version %   
-'&#x005E;' '' ^            2 % Copyright `CopyYear.2001. Eitan M. Gurari %
-'&#x007E;' ''~             3 `<version 2`>
-'&#x0308;' ''              4 `<version 3`>
-'&#x007E;' '' hungarumlaut 5 `<version 4`>
-'&#x030A;' ''              6 `<version 5`>
-'&#x030C;' ''              7 `<version 6`>
-'&#x0306;' ''              8 `<version 7`> 
-'&#x00AF;' ''              9 `<version 8`>
-'&#x0307;' ''             10 `<version 9`>
-'&#x00B8;' ''             11 `<version 10`>
-'&#x0332;' ''             12 `<version 11`>
-'&#x0326;' ''             13 `<version 12`>
-'' ''                     14 `<version 13`>
-'' ''                     15 `<version 14`>
-'' ''                     16 `<version 15`>
-'' ''                     17 `<version 16`>
-'&#8222;' ''              18 `<version 17`>
-'' ''                     19 `<version 18`>
-'' ''                     20
-'&#x2013;' ''             21
-'&#x2014;' ''             22
-'' ''            23
-'&#x2190;' '' leftarrow   24
-'&#x2192;' '' rightarrow     25
-'' ''                   26
-'' ''                         27
-'' ''                          28
-'' ''                          29
-'' ''                          30
-'' ''                          31
-'&#x0180;' ''           32
-'' ''                          33
-'' ''                          34
-'' ''                          35
-'$' ''            36
-'' ''                          37
-'' ''                          38
-'&#x0027;' ''           39
-'' ''                          40
-'' ''                          41
-'*' ''            42
-'' ''                          43
-',' ''            44
-'=' ''            45
-'.' ''            46
-'/' ''            47
-'0' ''            48
-'1' ''            49
-'2' ''            50
-'3' ''            51
-'4' ''            52
-'5' ''            53
-'6' ''            54
-'7' ''            55
-'8' ''            56
-'9' ''            57
-'' ''                          58
-'' ''                          59
-'&#x2039;' ''            60
-'-' ''            61
-'&#x203A;' ''            62
-'' ''                          63
-'' ''                          64
-'' ''                          65
-'' ''                          66
-'' ''                          67
-'' ''                          68
-'' ''                          69
-'' ''                          70
-'' ''                          71
-'' ''                          72
-'' ''                          73
-'' ''                          74
-'' ''                          75
-'' ''                          76
-'&#x2126;' ''            77
-'' ''                          78
-'&#x25CB;' ''                          79
-'' ''                          80
-'' ''                          81
-'' ''                          82
-'' ''                          83
-'' ''                          84
-'' ''                          85
-'' ''                          86
-'&#x2127;' ''                          87
-'' ''                          88
-'' ''                          89
-'' ''                          90
-'&#x005B;' ''                          91
-'' ''                          92
-'&#x005D;' ''            93
-'&#x2191;' ''  uparrow         94
-'&#x2193;' '' downarrow           95
-'&#x2018;' ''            96
-'' ''                          97
-'&#x22C6;' ''                          98
-'???' ''                      99
-'&#x2260;' ''                          100
-'' ''                          101
-'' ''                          102
-'' ''                          103
-'' ''                          104
-'' ''                          105
-'' ''                          106
-'' ''                          107
-'???' ''                          108
-'???' ''                          109
-'&#x226A;' ''                          110
-'' ''                          111
-'' ''                          112
-'' ''                          113
-'' ''                          114
-'' ''                          115
-'' ''                          116
-'' ''                          117
-'' ''                          118
-'' ''                          119
-'' ''                          120
-'' ''                          121
-'' ''                          122
-'' ''                          123
-'' ''                          124
-'' ''                          125
-'' ''                          126
-'=' ''                          127
-'~' ''                          128
-'&#x25FE;' ''                          129
-'&#x02D8;' ''                          130
-'&#x02C7;' ''                          131
-'&#x2020;' ''                          132
-'&#x2021;' ''                          133
-'&#x2016;' ''                          134
-'&#x2030;' ''                          135
-'&#x22C5;' ''                          136
-'&#x2103;' ''                          137
-'&#x0024;' ''                          138
-'&#x00A2;' ''                          139
-'f' ''                          140
-'&#x2041;' ''                          141
-'&#x20A9;' ''                          142
-'&#x20A6;' ''                          143
-'???' ''                          144
-'???' ''                          145
-'&#x20A4;' ''                          146
-'&#x211E;' ''                          147
-'&#x203D;' ''                          148
-'???' ''                          149
-'&#x20AB;' ''                          150
-'&#x2122;' ''                          151
-'&#x2031;' ''                          152
-'???' ''                          153
-'???' ''                          154
-'&#x2116;' ''                          155
-'&#x0025;' ''                          156
-'&#x213E;' ''                          157
-'&#x22C4;' ''                          158
-'&#x2120;' ''                          159
-'&#x2045;' ''                          160
-'&#x2046;' ''                          161
-'&#x00A2;' ''                          162
-'&#x00A3;' ''                          163
-'&#x00A4;' ''                          164
-'&#x00A5;' ''                          165
-'&#x00A6;' ''                          166
-'&#x00A7;' ''                          167
-'&#x00A8;' ''                          168
-'&#x24B8;' ''                          169
-'&#x00A9;' ''                          170
-'&#x00AA;' ''                          171
-'&#x00AC;' ''                          172
-'&#x2117;' ''                          173
-'&#x00AE;' ''                          174
-'&#x00AF;' ''                          175
-'&#x00B0;' ''                          176
-'&#x00B1;' ''                          177
-'&#x00B2;' ''                          178
-'&#x00B3;' ''                          179
-'&#x00B4;' ''                          180
-'&#x00B5;' ''  \textmu, micro sign     181
-'&#x00B6;' ''                          182
-'&#x00B7;' ''                          183
-'&#x203B;' ''                          184
-'&#x00B9;' ''                          185
-'&#x00BA;' ''                          186
-'&#x221A;' ''                          187
-'&#x00BC;' ''                          188
-'&#x00BD;' ''                          189
-'&#x00BE;' ''                          190
-'&#x20AC;' ''                          191
-'' ''                          192
-'' ''                          193
-'' ''                          194
-'' ''                          195
-'' ''                          196
-'' ''                          197
-'' ''                          198
-'' ''                          199
-'' ''                          200
-'' ''                          201
-'' ''                          202
-'' ''                          203
-'' ''                          204
-'' ''                          205
-'' ''                          206
-'' ''                          207
-'' ''                          208
-'' ''                          209
-'' ''                          210
-'' ''                          211
-'' ''                          212
-'' ''                          213
-'&#x00D7;' ''                          214
-'' ''                          215
-'' ''                          216
-'' ''                          217
-'' ''                          218
-'' ''                          219
-'' ''                          220
-'' ''                          221
-'' ''                          222
-'' ''                          223
-'' ''                          224
-'' ''                          225
-'' ''                          226
-'' ''                          227
-'' ''                          228
-'' ''                          229
-'' ''                          230
-'' ''                          231
-'' ''                          232
-'' ''                          233
-'' ''                          234
-'' ''                          235
-'' ''                          236
-'' ''                          237
-'' ''                          238
-'' ''                          239
-'' ''                          240
-'' ''                          241
-'' ''                          242
-'' ''                          243
-'' ''                          244
-'' ''                          245
-'&#x00F7;' ''                          246
+'&#xF6CE;'	''	Grave                    
+'&#xF6C9;'	''	Acute                    
+'&#xEA15;'	''	Circumflex               
+'&#xEA44;'	''	Tilde                    
+'&#xF6CB;'	''	Dieresis                 
+'&#xF6CF;'	''	Hungarumlaut             
+'&#xEA40;'	''	Ring                     
+'&#xF6CA;'	''	Caron                    
+'&#xEA02;'	''	Breve                    
+'&#xF6D0;'	''	Macron                   
+'&#xEA30;'	''	Dotaccent                
+'&#x00B8;'	''	cedilla                  
+'&#x02DB;'	''	ogonek                   
+'&#x201A;'	''	quotesinglbase
+''	''	none                             
+''	''	none                             
+''	''	none                             
+''	''	none                             
+'&#x201E;'	''	quotedblbase             
+''	''	none
+''	''	none                         
+'&#xF6DE;'	''	twelveudash
+'&#xF6DE;'	''	threequartersemdash
+'&#x200C;'	''	afii61664
+'&#x2190;'	''	arrowleft
+'&#x2192;'	''	arrowright
+'&#x2040;'	''	tieaccentlowercase
+'&#x0361;'	''	tieaccentcapital
+'&#x2040;'	''	tieaccentlowercase.new
+'&#x0361;'	''	tieaccentcapital.new
+''	''	none
+'&#x200C;'	''	afii61664
+'&#x2422;'	''	uni2422
+''	''	none
+''	''	none
+''	''	none
+'&#x0024;'	''	dollar
+''	''	none
+''	''	none
+'&#x0027;'	''	quotesingle
+''	''	none
+''	''	none
+'&#x2217;'	''	asteriskmath
+''	''	none
+'&#x002C;'	''	comma
+'&#xFE66;'	''	hyphendbl
+'&#x002E;'	''	period
+'&#x2044;'	''	fraction
+'&#xF730;'	''	zerooldstyle
+'&#xF731;'	''	oneoldstyle
+'&#xF732;'	''	twooldstyle
+'&#xF733;'	''	threeoldstyle
+'&#xF734;'	''	fouroldstyle
+'&#xF735;'	''	fiveoldstyle
+'&#xF736;'	''	sixoldstyle
+'&#xF737;'	''	sevenoldstyle
+'&#xF738;'	''	eightoldstyle
+'&#xF739;'	''	nineoldstyle
+''	''	none
+''	''	none
+'&#x2329;'	''	angleleft
+'&#x2212;'	''	minus
+'&#x232A;'	''	angleright
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+'&#x2127;'	''	uni2127
+''	''	none
+'&#x25CB;'	''	circle
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+'&#x2126;'	''	Omega
+''	''	none
+''	''	none
+''	''	none
+'&#x301A;'	''	uni301A
+''	''	none
+'&#x301B;'	''	uni301B
+'&#x2191;'	''	arrowup
+'&#x2193;'	''	arrowdown
+'&#x0060;'	''	grave
+''	''	none
+'&#x22C6;'	''	born
+'&#x26AE;'	''	divorced
+'&#x271D;'	''	died
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+'&#xEB40;'	''	leaf
+'&#x26AD;'	''	married
+'&#x266A;'	''	musicalnote
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+'&#x002DC;'	''	tildelow
+'&#xFE66;'	''	hyphendbl.alt
+'&#x02D8;'	''	breve
+'&#x02C7;'	''	caron
+'&#x02DD;'	''	hungarumlaut
+'&#xF6D6;'	''	dblgrave
+'&#x2020;'	''	dagger
+'&#x2021;'	''	daggerdbl
+'&#x2016;'	''	uni2016
+'&#x2030;'	''	perthousand
+'&#x2022;'	''	bullet
+'&#x2103;'	''	uni2103
+'&#xF724;'	''	dollaroldstyle
+'&#xF7A2;'	''	centoldstyle
+'&#x0192;'	''	florin
+'&#x20A1;'	''	colonmonetary
+'&#x20A9;'	''	uni20A9
+'&#x20A6;'	''	uni20A6
+'&#x20B2;'	''	guarani
+'&#x20B1;'	''	peso
+'&#x20A4;'	''	lira
+'&#x211E;'	''	recipe
+'&#x203D;'	''	uni203D
+'&#x2E18;'	''	gnaborretni
+'&#x20AB;'	''	dong
+'&#x2122;'	''	trademark
+'&#x2031;'	''	uni2031
+'&#x00B6;'	''	paragraph
+'&#x0E3F;'	''	uni0E3F
+'&#x2116;'	''	afii61352
+'&#x2052;'	''	discount
+'&#x212E;'	''	estimated
+'&#x25E6;'	''	openbullet
+'&#x2120;'	''	uni2120
+'&#x2045;'	''	uni2045
+'&#x2046;'	''	uni2046
+'&#x00A2;'	''	cent
+'&#x00A3;'	''	sterling
+'&#x00A4;'	''	currency
+'&#x00A5;'	''	yen
+'&#x00A6;'	''	brokenbar
+'&#x00A7;'	''	section
+'&#x00A8;'	''	dieresis
+'&#x00A9;'	''	copyright
+'&#x00AA;'	''	ordfeminine
+'&#x0254;'	''	copyleft
+'&#x00AC;'	''	logicalnot
+'&#x2117;'	''	uni2117
+'&#x00AE;'	''	registered
+'&#x00AF;'	''	macron
+'&#x00B0;'	''	degree
+'&#x00B1;'	''	plusminus
+'&#x00B2;'	''	twosuperior
+'&#x00B3;'	''	threesuperior
+'&#x00B4;'	''	acute
+'&#x00B5;'	''	mu
+'&#x00B6;'	''	paragraph
+'&#x00B7;'	''	periodcentered
+'&#x203B;'	''	uni203B
+'&#x00B9;'	''	onesuperior
+'&#x00BA;'	''	ordmasculine
+'&#x221A;'	''	radical
+'&#x00BC;'	''	onequarter
+'&#x00BD;'	''	onehalf
+'&#x00BE;'	''	threequarters
+'&#x20AC;'	''	Euro
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+'&#x00D7;'	''	multiply
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+'&#x00F7;'	''	divide
 tcrm 0 246
 >>>
 
