--- a/lit/tex4ht-ooffice.tex
+++ b/lit/tex4ht-ooffice.tex
@@ -7877,33 +7877,7 @@ An approximation is provided here, to be cleaned by xtpipes.
 
 
 \<il2-pl.tcx url encoder\><<<
-\Configure{url-encoder}
-      {%}{%25}
-      {&}{%26}
-      {'}{%27}
-      {<}{%3C}
-      {>}{%3E}
-      {_}{_}
-      {^}{^}
-      {±}{&#x0105;}
-      {æ}{&#x0107;}
-      {ê}{&#x0119;}
-      {³}{&#x0142;}
-      {ó}{&#x00F3;}
-      {ñ}{&#x0144;}
-      {¶}{&#x015B;}
-      {¼}{&#x017A;}
-      {¿}{&#x017C;}
-      {¡}{&#x0104;}
-      {Æ}{&#x0106;}
-      {Ê}{&#x0118;}
-      {£}{&#x0141;}
-      {Ó}{&#x00D3;}
-      {Ñ}{&#x0143;}
-      {¦}{&#x015A;}
-      {¬}{&#x0179;}
-      {¯}{&#x017B;}
-      {}{}
+\input{html4-l2-url.4ht}
 >>>
 
 
