biblatex version check from Michal, https://puszcza.gnu.org.ua/bugs/?268
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@160 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,7 @@
+2016-01-04  Michal Hoftich  <michal.h21@gmail.com>
+
+	* tex4ht-4ht.tex (biblatex.4ht): Fix for version checking
+
 2015-12-19  Michal Hoftich  <michal.h21@gmail.com>
 
 	* tex4ht-ooffice.tex (il2-pl.tcx url encoder): Fix the file
