\nameref* support from Michal, https://puszcza.gnu.org.ua/bugs/?269
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@161 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,9 @@
+2016-01-12  Michal Hoftich  <michal.h21@gmail.com>
+
+	* tex4ht-4ht.tex (hyperref.4ht): Added support for \nameref* command,
+	http://tex.stackexchange.com/q/285339/2891,
+	http://puszcza.gnu.org.ua/bugs/?269.
+
 2016-01-04  Michal Hoftich  <michal.h21@gmail.com>
 
 	* tex4ht-4ht.tex (biblatex.4ht): Fix for version checking
