--- a/lit/tex4ht-4ht.tex
+++ b/lit/tex4ht-4ht.tex
@@ -1,7 +1,7 @@
 % $Id$
 % tex tex4ht-4ht   or   ht tex tex4ht-4ht
 %
-% Copyright 2009-2015 TeX Users Group    
+% Copyright 2009-2016 TeX Users Group    
 % Copyright 1996-2009 Eitan M. Gurari    
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
@@ -3524,10 +3524,9 @@ This will not work for documents broken into pages!!  The
 \Link[http://www.tug.org/ListsArchives/pdftex/msg02400.html]{}{}msg02400\EndLink
 
 \<hyperref.4ht\><<<
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
-% hyperref.4ht                          |version %
-% Copyright (C) |CopyYear.1999.       Eitan M. Gurari         %
-|<TeX4ht copyright|>
+% hyperref.4ht (|version), generated from |jobname.tex
+% Copyright |CopyYear.1999. Eitan M. Gurari 
+|<TeX4ht copywrite|>
 \csname end:hyperref\endcsname
 |<nameref.sty|>
 |<ifHy@texht undefined?|>
@@ -4392,7 +4391,10 @@ but they are not accessible there in tex4ht mode.
 \expandafter\ifx \csname real@setref\endcsname\relax 
    \def\@pagerefstar#1{%  
       \HyRef@StarSetRef{#1}\@secondoffive  
-   } 
+   }
+   \def\@namerefstar#1{%
+       \HyRef@StarSetRef{#1}\@thirdoffive
+     }
    \def\HyRef@StarSetRef#1{%  
      \begingroup  
        \Hy@safe@activestrue  
