pcrro8r.htf fixes from Michal, http://puszcza.gnu.org.ua/bugs/?271
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@162 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,8 @@
+2016-02-01  Michal Hoftich  <michal.h21@gmail.com>
+
+	* tex4ht-fonts-noncjk.tex (pcrro8r.htf): Fixed some wrong characters.
+        http://puszcza.gnu.org.ua/bugs/?271
+
 2016-01-12  Michal Hoftich  <michal.h21@gmail.com>
 
 	* tex4ht-4ht.tex (hyperref.4ht): Added support for \nameref* command,
