--- a/lit/tex4ht-fonts-noncjk.tex
+++ b/lit/tex4ht-fonts-noncjk.tex
@@ -25975,261 +25975,261 @@ htfcss: pcrr8r  font-family: monospace;
 
 \<pcrro8r\><<<
 pcrro8r 1 255
-'' ''          1 `<version 0`>
-'&#xFB01;' ''  2 % pcrro8r.htf                `version %
-'&#xFB02;'''   3 % Copyright `CopyYear.2000. Eitan M. Gurari %
-'/' ''         4 `<version 2`>
-'&#x00AF;' ''  5 `<version 3`>
-'L'      '1'   6 `<version 4`>
-'l'      '1'   7 `<version 5`>
-'&#x00B8;' ''  8 `<version 6`>
-'&#x00B0;' ''  9 `<version 7`> 
-''''          10 `<version 8`>
-'' ''         11 `<version 9`>
-'-' ''        12 `<version 10`>
-'' ''         13 `<version 11`>
-'&#x017D;' '' 14 `<version 12`>
-'&#x017E;' '' 15 `<version 13`>
-'&#x02C7;' '' 16 `<version 14`>
-'&#x0131;' '' 17 `<version 15`>
-'' ''         18 `<version 16`>
-'' ''         19 `<version 17`>
-'' ''         20 `<version 18`>
-'' ''            21
-'' ''            22
-'' ''            23
-'' ''            24
-'' ''            25
-'' ''            26
-'' ''            27
-'' ''            28
-'' ''            29
-'' ''            30
-'' ''            31
-' ' ''            32
-'!' ''           33
-'&#34;' ''            34
-'#' ''           35
-'$' ''            36
-'%' ''           37
-'&#x0026;' ''            38
--'-      --           39
-'&#x0028;' ''            40
-'&#x0029;' ''           41
-'*' ''            42
-'+' ''            43
-',' ''            44
-'-' ''            45
-'.' ''            46
-'/' ''            47
-'0' ''            48
-'1' ''            49
-'2' ''            50
-'3' ''            51
-'4' ''            52
-'5' ''            53
-'6' ''            54
-'7' ''            55
-'8' ''            56
-'9' ''            57
-':' ''            58
-';' ''            59
-'&#x003C;' ''            60
-'=' ''            61
-'&#x003E;' ''            62
-'?' ''            63
-'@' ''            64
-'A' ''            65
-'B' ''            66
-'C' ''            6
-'D' ''            68
-'E' ''            9
-'F' ''            70
-'G' ''           71
-'H' ''            72
-'I' ''           73
-'J' ''            74
-'K' ''           75
-'L' ''            76
-'M' ''           77
-'N' ''            78
-'O' ''           79
-'P' ''            80
-'Q' ''           81
-'R' ''            82
-'S' ''           83
-'T' ''            84
-'U' ''           85
-'V' ''            86
-'W' ''           87
-'X' ''            88
-'Y' ''           89
-'Z' ''            90
-'&#x005B;' ''           91
-'&#x005C;' ''            92
-'&#x005D;' ''           93
-'^' ''            94
-'_' ''            95
-'' '' &lsquo; 96
-'a' ''            97
-'b' ''            98
-'c' ''            99
-'d' ''           100
-'e' ''           101
-'f' ''           102
-'g' ''           103
-'h' ''           104
-'i' ''           105
-'j' ''           106
-'k' ''           107
-'l' ''           108
-'m' ''           109
-'n' ''           110
-'o' ''           111
-'p' ''           112
-'q' ''           113
-'r' ''           114
-'s' ''           115
-'t' ''           116
-'u' ''           117
-'v' ''           118
-'w' ''           119
-'x' ''           120
-'y' ''           121
-'z' ''           122
-'&#x007B;' ''           123
-'|' ''           124
-'&#x007D;' ''           125
-'~' ''           126
-'&#x00A8;' ''           127
-'' ''            128
-'' ''            129
-',' ''            130
-'&#x201E;' ''           131
-'&#x2026;' ''           132
-'&#x2206;' ''           133
-'&#x2024;' ''           134
-'&#x2021;' ''           135
-'&#x0208;' ''           136
-'&#x2030;' ''           137
-'&#x0160;' ''           138
-'&#x2039;' ''           139
-'&#x0152;' ''           140
-'' ''            141
-'' ''                 142
-'' ''                 143
-'' ''                 144
-'' ''                 145
-'' ''                 146
-'&#x201C;' ''           147
-'&#x201D;' ''           148
-'&#x00B7;' ''           149
-'&#x2013;' ''           150
-'&#x2014;' ''           151
-'&#x02DC;' ''           152
-'&#x2122;' ''           153
-'&#x0161;' ''           154
-'&#x203A;' ''           155
-'&#x0153;' ''           156
-'' ''                157
-'' ''            158
-'&#x0178;' ''           159
-'' ''                 160
-'&#x00A1;' ''           161
-'&#x00A2;' ''           162
-'&#x00A3;' ''           163
-'&#x00A4;' ''           164
-'&#x00A5;' ''           165
-'&#x00A6;' ''           166
-'&#x00A7;' ''           167
-'&#x00A8;' ''           168
-'&#x00A9;' ''           169
-'&#x00AA;' ''           170
-'&#x00AB;' ''           171
-'&#x00AC;' ''           172
-'&#x00AD;' ''           173
-'&#x00AE;' ''           174
-'&#x00AF;' ''           175
-'&#x00B0;' ''           176
-'&#x00B1;' ''           177
-'&#x00B2;' ''           178
-'&#x00B3;' ''           179
-'&#x00B4;' ''           180
-'&#x00B5;' ''           181
-'&#x00B6;' ''           182
-'&#x00B7;' ''           183
-'&#x00B8;' ''           184
-'&#x00B9;' ''           185
-'&#x00BA;' ''           186
-'&#x00BB;' ''           187
-'&#x00BC;' ''           188
-'&#x00BD;' ''           189
-'&#x00BE;' ''           190
-'&#x00BF;' ''           191
-'&#x00C0;' ''           192
-'&#x00C1;' ''           193
-'&#x00C2;' ''           194
-'&#x00C3;' ''           195
-'&#x00C4;' ''           196
-'&#x00C5;' ''           197
-'&#x00C6;' ''           198
-'&#x00C7;' ''           199
-'&#x00C8;' ''           200
-'&#x00C9;' ''           201
-'&#x00CA;' ''           202
-'&#x00CB;' ''           203
-'&#x00CC;' ''           204
-'&#x00CD;' ''           205
-'&#x00CE;' ''           206
-'&#x00CF;' ''           207
-'&#x00D0;' ''           208
-'&#x00D1;' ''           209
-'&#x00D2;' ''           210
-'&#x00D3;' ''           211
-'&#x00D4;' ''           212
-'&#x00D5;' ''           213
-'&#x00D6;' ''           214
-'&#x0152;' ''           215
-'&#x00D8;' ''           216
-'&#x00D9;' ''           217
-'&#x00DA;' ''           218
-'&#x00DB;' ''           219
-'&#x00DC;' ''           220
-'&#x0178;' ''           221
-'&#x00DE;' ''           222
-'&#x00DF;' ''           223
-'&#x00E0;' ''           224
-'&#x00E1;' ''           225
-'&#x00E2;' ''           226
-'&#x00E3;' ''           227
-'&#x00E4;' ''           228
-'&#x00E5;' ''           229
-'&#x00E6;' ''           230
-'&#x00E7;' ''           231
-'&#x00E8;' ''           232
-'&#x00E9;' ''           233
-'&#x00EA;' ''           234
-'&#x00EB;' ''           235
-'&#x00EC;' ''           236
-'&#x00ED;' ''           237
-'&#x00EE;' ''           238
-'&#x00EF;' ''           239
-'&#x00F0;' ''           240
-'&#x00F1;' ''           241
-'&#x00F2;' ''           242
-'&#x00F3;' ''           243
-'&#x00F4;' ''           244
-'&#x00F5;' ''           245
-'&#x00F6;' ''           246
-'&#x0153;' ''           247
-'&#x00F8;' ''           248
-'&#x00F9;' ''           249
-'&#x00FA;' ''           250
-'&#x00FB;' ''           251
-'&#x00FC;' ''           252
-'&#x00FF;' ''           253
-'&#x00FE;' ''           254
-'&#x00FF;' ''           255
+'&#x02D9;'	''	dotaccent
+'&#xFB01;'	''	fi
+'&#xFB02;'	''	fl
+'&#x2044;'	''	fraction
+'&#x02DD;'	''	hungarumlaut
+'&#x0141;'	''	Lslash
+'&#x0142;'	''	lslash
+'&#x02DB;'	''	ogonek
+'&#x02DA;'	''	ring
+''	''	none
+'&#x02D8;'	''	breve
+'&#x2212;'	''	minus
+''	''	none
+'&#x017D;'	''	Zcaron
+'&#x017E;'	''	zcaron
+'&#x02C7;'	''	caron
+'&#x0131;'	''	dotlessi
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+'&#x0060;'	''	grave
+'&#x0027;'	''	quotesingle
+'&#x0020;'	''	space
+'&#x0021;'	''	exclam
+'&#x0022;'	''	quotedbl
+'&#x0023;'	''	numbersign
+'&#x0024;'	''	dollar
+'&#x0025;'	''	percent
+'&#x0026;'	''	ampersand
+'&#x2019;'	''	quoteright
+'&#x0028;'	''	parenleft
+'&#x0029;'	''	parenright
+'&#x002A;'	''	asterisk
+'&#x002B;'	''	plus
+'&#x002C;'	''	comma
+'&#x002D;'	''	hyphen
+'&#x002E;'	''	period
+'&#x002F;'	''	slash
+'&#x0030;'	''	zero
+'&#x0031;'	''	one
+'&#x0032;'	''	two
+'&#x0033;'	''	three
+'&#x0034;'	''	four
+'&#x0035;'	''	five
+'&#x0036;'	''	six
+'&#x0037;'	''	seven
+'&#x0038;'	''	eight
+'&#x0039;'	''	nine
+'&#x003A;'	''	colon
+'&#x003B;'	''	semicolon
+'&#x003C;'	''	less
+'&#x003D;'	''	equal
+'&#x003E;'	''	greater
+'&#x003F;'	''	question
+'&#x0040;'	''	at
+'&#x0041;'	''	A
+'&#x0042;'	''	B
+'&#x0043;'	''	C
+'&#x0044;'	''	D
+'&#x0045;'	''	E
+'&#x0046;'	''	F
+'&#x0047;'	''	G
+'&#x0048;'	''	H
+'&#x0049;'	''	I
+'&#x004A;'	''	J
+'&#x004B;'	''	K
+'&#x004C;'	''	L
+'&#x004D;'	''	M
+'&#x004E;'	''	N
+'&#x004F;'	''	O
+'&#x0050;'	''	P
+'&#x0051;'	''	Q
+'&#x0052;'	''	R
+'&#x0053;'	''	S
+'&#x0054;'	''	T
+'&#x0055;'	''	U
+'&#x0056;'	''	V
+'&#x0057;'	''	W
+'&#x0058;'	''	X
+'&#x0059;'	''	Y
+'&#x005A;'	''	Z
+'&#x005B;'	''	bracketleft
+'&#x005C;'	''	backslash
+'&#x005D;'	''	bracketright
+'&#x005E;'	''	asciicircum
+'&#x005F;'	''	underscore
+'&#x2018;'	''	quoteleft
+'&#x0061;'	''	a
+'&#x0062;'	''	b
+'&#x0063;'	''	c
+'&#x0064;'	''	d
+'&#x0065;'	''	e
+'&#x0066;'	''	f
+'&#x0067;'	''	g
+'&#x0068;'	''	h
+'&#x0069;'	''	i
+'&#x006A;'	''	j
+'&#x006B;'	''	k
+'&#x006C;'	''	l
+'&#x006D;'	''	m
+'&#x006E;'	''	n
+'&#x006F;'	''	o
+'&#x0070;'	''	p
+'&#x0071;'	''	q
+'&#x0072;'	''	r
+'&#x0073;'	''	s
+'&#x0074;'	''	t
+'&#x0075;'	''	u
+'&#x0076;'	''	v
+'&#x0077;'	''	w
+'&#x0078;'	''	x
+'&#x0079;'	''	y
+'&#x007A;'	''	z
+'&#x007B;'	''	braceleft
+'&#x007C;'	''	bar
+'&#x007D;'	''	braceright
+'&#x007E;'	''	asciitilde
+''	''	none
+''	''	none
+''	''	none
+'&#x201A;'	''	quotesinglbase
+'&#x0192;'	''	florin
+'&#x201E;'	''	quotedblbase
+'&#x2026;'	''	ellipsis
+'&#x2020;'	''	dagger
+'&#x2021;'	''	daggerdbl
+'&#x02C6;'	''	circumflex
+'&#x2030;'	''	perthousand
+'&#x0160;'	''	Scaron
+'&#x2039;'	''	guilsinglleft
+'&#x0152;'	''	OE
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+''	''	none
+'&#x201C;'	''	quotedblleft
+'&#x201D;'	''	quotedblright
+'&#x2022;'	''	bullet
+'&#x2013;'	''	endash
+'&#x2014;'	''	emdash
+'&#x02DC;'	''	tilde
+'&#x2122;'	''	trademark
+'&#x0161;'	''	scaron
+'&#x203A;'	''	guilsinglright
+'&#x0153;'	''	oe
+''	''	none
+''	''	none
+'&#x0178;'	''	Ydieresis
+''	''	none
+'&#x00A1;'	''	exclamdown
+'&#x00A2;'	''	cent
+'&#x00A3;'	''	sterling
+'&#x00A4;'	''	currency
+'&#x00A5;'	''	yen
+'&#x00A6;'	''	brokenbar
+'&#x00A7;'	''	section
+'&#x00A8;'	''	dieresis
+'&#x00A9;'	''	copyright
+'&#x00AA;'	''	ordfeminine
+'&#x00AB;'	''	guillemotleft
+'&#x00AC;'	''	logicalnot
+'&#x002D;'	''	hyphen
+'&#x00AE;'	''	registered
+'&#x00AF;'	''	macron
+'&#x00B0;'	''	degree
+'&#x00B1;'	''	plusminus
+'&#x00B2;'	''	twosuperior
+'&#x00B3;'	''	threesuperior
+'&#x00B4;'	''	acute
+'&#x00B5;'	''	mu
+'&#x00B6;'	''	paragraph
+'&#x00B7;'	''	periodcentered
+'&#x00B8;'	''	cedilla
+'&#x00B9;'	''	onesuperior
+'&#x00BA;'	''	ordmasculine
+'&#x00BB;'	''	guillemotright
+'&#x00BC;'	''	onequarter
+'&#x00BD;'	''	onehalf
+'&#x00BE;'	''	threequarters
+'&#x00BF;'	''	questiondown
+'&#x00C0;'	''	Agrave
+'&#x00C1;'	''	Aacute
+'&#x00C2;'	''	Acircumflex
+'&#x00C3;'	''	Atilde
+'&#x00C4;'	''	Adieresis
+'&#x00C5;'	''	Aring
+'&#x00C6;'	''	AE
+'&#x00C7;'	''	Ccedilla
+'&#x00C8;'	''	Egrave
+'&#x00C9;'	''	Eacute
+'&#x00CA;'	''	Ecircumflex
+'&#x00CB;'	''	Edieresis
+'&#x00CC;'	''	Igrave
+'&#x00CD;'	''	Iacute
+'&#x00CE;'	''	Icircumflex
+'&#x00CF;'	''	Idieresis
+'&#x00D0;'	''	Eth
+'&#x00D1;'	''	Ntilde
+'&#x00D2;'	''	Ograve
+'&#x00D3;'	''	Oacute
+'&#x00D4;'	''	Ocircumflex
+'&#x00D5;'	''	Otilde
+'&#x00D6;'	''	Odieresis
+'&#x00D7;'	''	multiply
+'&#x00D8;'	''	Oslash
+'&#x00D9;'	''	Ugrave
+'&#x00DA;'	''	Uacute
+'&#x00DB;'	''	Ucircumflex
+'&#x00DC;'	''	Udieresis
+'&#x00DD;'	''	Yacute
+'&#x00DE;'	''	Thorn
+'&#x00DF;'	''	germandbls
+'&#x00E0;'	''	agrave
+'&#x00E1;'	''	aacute
+'&#x00E2;'	''	acircumflex
+'&#x00E3;'	''	atilde
+'&#x00E4;'	''	adieresis
+'&#x00E5;'	''	aring
+'&#x00E6;'	''	ae
+'&#x00E7;'	''	ccedilla
+'&#x00E8;'	''	egrave
+'&#x00E9;'	''	eacute
+'&#x00EA;'	''	ecircumflex
+'&#x00EB;'	''	edieresis
+'&#x00EC;'	''	igrave
+'&#x00ED;'	''	iacute
+'&#x00EE;'	''	icircumflex
+'&#x00EF;'	''	idieresis
+'&#x00F0;'	''	eth
+'&#x00F1;'	''	ntilde
+'&#x00F2;'	''	ograve
+'&#x00F3;'	''	oacute
+'&#x00F4;'	''	ocircumflex
+'&#x00F5;'	''	otilde
+'&#x00F6;'	''	odieresis
+'&#x00F7;'	''	divide
+'&#x00F8;'	''	oslash
+'&#x00F9;'	''	ugrave
+'&#x00FA;'	''	uacute
+'&#x00FB;'	''	ucircumflex
+'&#x00FC;'	''	udieresis
+'&#x00FD;'	''	yacute
+'&#x00FE;'	''	thorn
+'&#x00FF;'	''	ydieresis
 pcrro8r 1 255
 htfcss: pcrro8r font-style: oblique;
 >>>
