--- a/lit/tex4ht-html32.tex
+++ b/lit/tex4ht-html32.tex
@@ -2,7 +2,7 @@
 %      latex tex4ht-html32
 % or xhlatex tex4ht-html32 "html,3,sections+"
 %
-% Copyright (C) 2009-2010 TeX Users Group
+% Copyright (C) 2009-2016 TeX Users Group
 % Copyright (C) 1996-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
@@ -4972,7 +4972,7 @@ else {
 \def\d:HA{\HCode{</td>}}
 \Configure{HVerbatim+}{\z@}{\:nbsp}
 \Configure{CssFile}{\jobname.css}
-  {/* \aa:CssFile\space from \jobname.tex (TeX4ht, \:today) */}
+  {/* \aa:CssFile\space from \jobname.tex (TeX4ht) */}
 \Configure{Picture+}{}{}
 \Configure{Picture*}{}{}
 \Configure{Needs}{l. 
@@ -6526,11 +6526,11 @@ need to change early the catcodes of `\verb'_' and `\verb'^'.
 
 \<src note\><<<
 <!--\FileName\space from \jobname.tex
-(TeX4ht, \:today)-->%
+(TeX4ht)-->%
 >>>
 
 \<4 src note\><<<
-<!--\FileName\space from \jobname.tex (\:today)-->%
+<!--\FileName\space from \jobname.tex -->%
 >>>
 
 
