--- a/lit/tex4ht-javahelp.tex
+++ b/lit/tex4ht-javahelp.tex
@@ -2,7 +2,7 @@
 % compile 3 times: latex tex4ht-javahelp   
 %             or  xhlatex tex4ht-javahelp "html,3,sections+"
 %
-% Copyright (C) 2009-2010 TeX Users Group
+% Copyright (C) 2009-2016 TeX Users Group
 % Copyright (C) 2003-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
@@ -946,8 +946,8 @@ and not referenced by other pages.
 \def\jhNote{%
      Created for JavaHelp
      (http://java.sun.com/products/javahelp/)\Hnewline
-     by TeX4ht (http://www.cse.ohio-state.edu/\string
-     ~gurari/TeX4ht/)\Hnewline from \jobname.tex at \:today \space
+     by TeX4ht (http://tug.org/tex4ht/)\Hnewline
+     from \jobname.tex \space
   }
 >>>
 
