--- a/lit/tex4ht-tei.tex
+++ b/lit/tex4ht-tei.tex
@@ -2,7 +2,7 @@
 % compile 3 times:     latex   tex4ht-tei   
 %                  or  xhlatex tex4ht-tei "html,3,sections+"
 %
-% Copyright (C) 2009-2010 TeX Users Group
+% Copyright (C) 2009-2016 TeX Users Group
 % Copyright (C) 2000-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
@@ -270,7 +270,7 @@ The front and back elements are optional.
 \Configure{TITLE+} 
    {\HCode{<publicationStmt> <p></p> </publicationStmt>\Hnewline
            <sourceDesc><p>\FileName\space from \jobname.tex
-                          (TeX4ht, \:today)</p></sourceDesc>\Hnewline
+                          (TeX4ht)</p></sourceDesc>\Hnewline
    }}
 >>>
 
