--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,27 @@
+2016-03-31  Karl Berry  <karl@freefriends.org>
+
+	* Makefile (tex4ht_info_html4_derived, tex4ht_info_javahelp_derived,
+	tex4ht_misc_derived): new variables, targets.
+	
+	* tex4ht-docbook.tex,
+	* tex4ht-html-speech.tex,
+	* tex4ht-html0.tex,
+	* tex4ht-html32.tex,
+	* tex4ht-ooffice.tex,
+	* tex4ht-tei.tex: likewise make timestamps (\:today) in output
+	off by default, enabled with timestamp option.  In css files
+	and other contexts where an option is inconvenient, just remove them.
+	
+	* tex4ht-javahelp.tex,
+	* tex4ht-docbook.tex: reference tug rather than ohio-state.edu
+	web site.
+
+2016-03-31  Michal Hoftich  <michal.h21@gmail.com>
+
+	* tex4ht-html4.tex (html4.4ht): remove timestamp from the HTML4
+	output.  It can be enabled with ``timestamp'' option.
+	https://puszcza.gnu.org.ua/bugs/index.php?277
+
 2016-03-16  Karl Berry  <karl@freefriends.org>
 
 	* Makefile (tex4ht_4ht_derived): add biblatex.4ht.
