--- a/lit/tex4ht-html-speech.tex
+++ b/lit/tex4ht-html-speech.tex
@@ -3,7 +3,7 @@
 %           or   xhlatex tex4ht-html-speech "html,3,sections+"
 % (html4*.4ht must be up to date.)
 %
-% Copyright 2009-2015 TeX Users Group
+% Copyright 2009-2016 TeX Users Group
 % Copyright 2006-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
@@ -398,8 +398,12 @@ Java SAX in stpipes.
     \expandafter\:gobbleM\meaning\Preamble}
 \Configure{@HEAD}
    {\HCode{<meta name="src" content="\jobname.tex"></meta>\Hnewline}} 
+\:CheckOption{timestamp}\if:Option
 \Configure{@HEAD}
    {\HCode{<meta name="date" content="\:today"></meta>\Hnewline}} 
+\else
+  \Log:Note{To print a timestamp, use the command line option timestamp}
+\fi
 >>>
 
 \<html extension file name\><<<
@@ -7322,8 +7326,12 @@ tex4ht-menu>>>
     \expandafter\:gobbleM\meaning\Preamble}
 \Configure{@HEAD}
    {\HCode{<meta name="src" content="\jobname.tex"\xml:empty>\Hnewline}} 
+\:CheckOption{timestamp}\if:Option
 \Configure{@HEAD}
    {\HCode{<meta name="date" content="\:today"\xml:empty>\Hnewline}} 
+\else
+  \Log:Note{To print a timestamp, use the command line option timestamp}
+\fi
 >>>
 
 
@@ -24115,7 +24123,7 @@ Was \verb+\SUBOff \SUPOff+. Any problems?
 \def\d:HA{\ifvmode \IgnorePar \fi \EndP\HCode{</td>}|<td recall EndP|>}
 \Configure{HVerbatim+}{\z@}{\:nbsp}
 \Configure{CssFile}{\jobname.css}
-  {/* \aa:CssFile\space from \jobname.tex (TeX4ht, \:today) */}
+  {/* \aa:CssFile\space from \jobname.tex (TeX4ht) */}
 \Configure{Picture+}{}{}
 \Configure{Picture*}{}{}
 \Configure{Picture-alt}{[Picture]}
