--- a/lit/tex4ht-html4.tex
+++ b/lit/tex4ht-html4.tex
@@ -3,7 +3,7 @@
 % Copy html4.4ht into the work directory before each of the 
 %            first two compilations
 %
-% Copyright 2009-2015 TeX Users Group
+% Copyright 2009-2016 TeX Users Group
 % Copyright 1996-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
@@ -436,9 +436,13 @@ tex4ht-menu>>>
 \Configure{@HEAD}
    {\HCode{<meta name="src"
                  content="\jobname.tex"\xml:empty>\Hnewline}} 
+\:CheckOption{timestamp}\if:Option
 \Configure{@HEAD}
    {\HCode{<meta name="date"
                  content="\:today"\xml:empty>\Hnewline}} 
+\else
+  \Log:Note{To print a timestamp, use the command line option timestamp}
+\fi
 >>>
 
 
@@ -20493,7 +20497,7 @@ Was \verb+\SUBOff \SUPOff+. Any problems?
 \def\d:HA{\ifvmode \IgnorePar \fi \EndP\HCode{</td>}|<td recall EndP|>}
 \Configure{HVerbatim+}{\z@}{\:nbsp}
 \Configure{CssFile}{\jobname.css}
-  {/* \aa:CssFile\space from \jobname.tex (TeX4ht, \:today) */}
+  {/* \aa:CssFile\space from \jobname.tex (TeX4ht) */}
 \Configure{Picture+}{}{}
 \Configure{Picture*}{}{}
 \Configure{Picture-alt}{[Picture]}
