--- a/lit/tex4ht-ooffice.tex
+++ b/lit/tex4ht-ooffice.tex
@@ -1,7 +1,7 @@
 % $Id$
 % compile 3 times: latex tex4ht-ooffice
 %      htlatex tex4ht-ooffice "xhtml,4,sections+"
-% Copyright 2009-2015 TeX Users Group
+% Copyright 2009-2016 TeX Users Group
 % Copyright 2001-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
@@ -663,10 +663,14 @@ Writer2LaTeX (w2l) doesn't currently allow line breaks with DOCTYPE
 \Configure{META}
    {<meta:generator>|<creator/generator|>\Hnewline
     </meta:generator>\Hnewline}
+\:CheckOption{timestamp}\if:Option
 \Configure{META}
    {<meta:creation-date>\:today</meta:creation-date>\Hnewline}
 \Configure{META}
    {<dc:date>\:today</dc:date>\Hnewline}
+\else
+  \Log:Note{To print a timestamp, use the command line option timestamp}
+\fi
 >>>
 
 
