copyright 2016 in .4ht files; compile html4 four times
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@165 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/tex4ht-html4.tex
+++ b/lit/tex4ht-html4.tex
@@ -1,7 +1,6 @@
 % $Id$
-% Compile 3 times: latex tex4ht-html4
-% Copy html4.4ht into the work directory before each of the 
-%            first two compilations
+% Compile 4 times: latex tex4ht-html4
+% Copy html4.4ht into the work directory before all but the last compilation.
 %
 % Copyright 2009-2016 TeX Users Group
 % Copyright 1996-2009 Eitan M. Gurari
@@ -66,7 +65,7 @@
 
 \<html4\><<<
 % html4.4ht (|version), generated from |jobname.tex
-% Copyright 2009-2015 TeX Users Group
+% Copyright 2009-2016 TeX Users Group
 % Copyright |CopyYear.1997. Eitan M. Gurari
 |<TeX4ht copywrite|>
 >>>
