--- a/lit/tex4ht-tei.tex
+++ b/lit/tex4ht-tei.tex
@@ -27,6 +27,7 @@
 
 \<tei\><<<
 % tei.4ht (|version), generated from |jobname.tex
+% Copyright 2009-2016 TeX Users Group
 % Copyright (C) |CopyYear.2000. Eitan M. Gurari
 |<TeX4ht copywrite|>
 >>>
