--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,9 @@
+2016-05-22  Karl Berry  <karl@freefriends.org>
+
+	* tex4ht-c.tex (search_file): return NULL rather than FALSE
+	to placate MiKTeX.  Report from Mojca,
+	https://sourceforge.net/p/miktex/bugs/2488.
+
 2016-03-31  Karl Berry  <karl@freefriends.org>
 
 	* Makefile (tex4ht_info_html4_derived, tex4ht_info_javahelp_derived,
