--- a/lit/tex4ht-c.tex
+++ b/lit/tex4ht-c.tex
@@ -2,7 +2,7 @@
 %         tex tex4ht-c
 % or   ht tex tex4ht-c
 
-% Copyright (C) 2009-2012 TeX Users Group
+% Copyright (C) 2009-2016 TeX Users Group
 % Copyright (C) 1996-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
@@ -232,8 +232,8 @@ the HTML/XML and \`'.css', also \`'.lg', \`'.idv', and
 
 \<tex4ht.c\><<< 
 /* tex4ht.c (`version), generated from `jobname.tex
-   Copyright (C) 2009-2012 TeX Users Group
-   Copyright (C) `CopyYear.1996. Eitan M. Gurari
+   Copyright 2009-2016 TeX Users Group
+   Copyright `CopyYear.1996. Eitan M. Gurari
 `<TeX4ht copyright`> */
 `<tex4ht.h`>
 >>>
@@ -15441,7 +15441,7 @@ static FILE* search_file( name, dir, flags )
   `<search file in named dir`>
   str[i] = '\0';
   return  subs?  search_file_ext( name, str, flags):
-                FALSE;
+                NULL;
 } 
 >>>
 
