geometry.4ht: new config, turn off frame-drawing, from michal per http://puszcza.gnu.org.ua/bugs/?303
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@167 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,9 @@
+2016-05-24  Michal Hoftich  <michal.h21@gmail.com>
+
+	* tex4ht-4ht.tex (geometry.4ht): new file to turn off frame-drawing.
+	<http://puszcza.gnu.org.ua/bugs/?303>
+	* Makefile (tex4ht_4ht_derived): add it.
+
 2016-05-22  Karl Berry  <karl@freefriends.org>
 
 	* tex4ht-c.tex (search_file): return NULL rather than FALSE
