--- a/lit/tex4ht-4ht.tex
+++ b/lit/tex4ht-4ht.tex
@@ -3253,6 +3253,26 @@ sectional unit. It has been fixed now.
 >>>
 
 %%%%%%%%%%%%%%%%%%
+\Section{geometry}
+
+Geometry with {\tt showframe} option writes spurious lines before 
+every DVI page in the XML output.
+\Link[https://puszcza.gnu.org.ua/bugs/?303]{}{}Bug report.\EndLink
+
+\<geometry.4ht\><<<
+% geometry.4ht (|version), generated from |jobname.tex
+% Copyright 2016 TeX Users Group
+|<TeX4ht license text|>
+|<geometry configurations|>
+\Hinput{geometry}
+\endinput
+>>>    \AddFile{8}{geometry}
+
+\<geometry configurations\><<<
+\renewcommand*{\Gm@pageframes}{}
+>>>
+
+%%%%%%%%%%%%%%%%%%
 \Section{by name}
 %%%%%%%%%%%%%%%%%%
 
