new protex option CodeLineNo for #line in C and similar; https://puszcza.gnu.org.ua/bugs/?136
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@169 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/protex/AlProTex.sty
+++ b/protex/AlProTex.sty
@@ -953,6 +953,21 @@
       \:temp}}
   \fi
 \fi
+
+%% Set source line numbers in the output
+%% \srclineBOL{symbol} - to change a beginning-of-line symbol
+%% \CodeInputLine - to change all the string. 
+%% 
+\:CheckOption{CodeLineNo}
+\if:Option
+  %% Set beginning-of-line symbol to #
+  %% if extension is c (case sensitive) 
+  \if\:InitAlProTex c\relax
+    \srclineBOL{\#}  
+  \fi
+ \SetOutputWithLineNo
+\fi
+
 \:CheckOption{eline}
 \catcode`\%=12
 \if:Option
