update copyright notices
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@170 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/protex/ChangeLog
+++ b/protex/ChangeLog
@@ -1,3 +1,8 @@
+2016-06-06  Karl Berry  <karl@freefriends.org>
+
+	* ProTex.sty,
+	* AlProTex.sty: update copyright notices.
+
 2016-06-05 Deimantas Galcius <deimi@vtex.lt>
 
 	* ProTex.sty (ExpandDefSrcLineNo): new macro, with friends.
