--- a/protex/AlProTex.sty
+++ b/protex/AlProTex.sty
@@ -1,23 +1,22 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%  AlProTex.sty                       2008-06-09-16:59  %
-%  Copyright (C) 1992--2008  by Eitan M. Gurari         %
-%                                                       %
-% This program can redistributed and/or modified under  %
-% the terms of the LaTeX Project Public License         %
-% Distributed from CTAN archives in directory           %
-% macros/latex/base/lppl.txt; either version 1 of the   %
-% License, or (at your option) any later version.       %
-%                                                       %
-% However, you are allowed to modify this program       %
-% without changing its name, if you modify its          %
-% signature. Changes to the signature can be introduced %
-% with a directive of the form                          %
-%            \message{signature}                        %
-%                                                       %
-%                            gurari@cse.ohio-state.edu  %
-%                http://www.cse.ohio-state.edu/~gurari  %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\immediate\write-1{version 2008-06-09-16:59}
+% $Id$
+% Copyright 2016 TeX Users Group
+% Copyright 1992-2008 Eitan M. Gurari          
+%                                                      
+% This program can redistributed and/or modified under 
+% the terms of the LaTeX Project Public License        
+% Distributed from CTAN archives in directory          
+% macros/latex/base/lppl.txt; either version 1 of the  
+% License, or (at your option) any later version.      
+%                                                      
+% This work has the LPPL maintenance status "maintained".
+%
+% The Current Maintainer of this work
+% is the TeX4ht Project <http://tug.org/tex4ht>.
+% 
+% If you modify this program, changing the 
+% version identification would be appreciated.
+%
+\immediate\write-1{version 2016-06-06}
 
 \expandafter\edef\csname :RestoreCatcodes\endcsname{%
    \catcode`\noexpand\noexpand\noexpand \^=\the\catcode`\^%
@@ -1596,4 +1595,3 @@
     \endinput}
 \:RestoreCatcodes
 \csname :temp\endcsname
-
