--- a/protex/ProTex.sty
+++ b/protex/ProTex.sty
@@ -1,22 +1,21 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  v 1.5
-%  ProTex                                               %
-%  Copyright (C) 1990,1991 by Eitan M. Gurari           %
-%                                                       %
-% This program can redistributed and/or modified under  %
-% the terms of the LaTeX Project Public License         %
-% Distributed from CTAN archives in directory           %
-% macros/latex/base/lppl.txt; either version 1 of the   %
-% License, or (at your option) any later version.       %
-%                                                       %
-% However, you are allowed to modify this program       %
-% without changing its name, if you modify its          %
-% signature. Changes to the signature can be introduced %
-% with a directive of the form                          %
-%            \message{signature}                        %
-%                                                       %
-%                            gurari@cis.ohio-state.edu  %
-%                http://www.cis.ohio-state.edu/~gurari  %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% $Id$
+% Copyright 2016 TeX Users Group
+% Copyright 1990-1999 Eitan M. Gurari          
+%                                                      
+% This program can redistributed and/or modified under 
+% the terms of the LaTeX Project Public License        
+% Distributed from CTAN archives in directory          
+% macros/latex/base/lppl.txt; either version 1 of the  
+% License, or (at your option) any later version.      
+%                                                      
+% This work has the LPPL maintenance status "maintained".
+%
+% The Current Maintainer of this work
+% is the TeX4ht Project <http://tug.org/tex4ht>.
+% 
+% If you modify this program, changing the 
+% version identification would be appreciated.
+
 \expandafter\edef\csname :RestoreCatcodes\endcsname{%
    \catcode`\noexpand :=\the\catcode`:%
    \catcode`\noexpand @=\the\catcode`@%
@@ -346,4 +345,3 @@
      \:oldNoSpecials{#1}{#2}{#3}\fi }
 \fi 
 \:RestoreCatcodes \endinput
-
