Removed spurious \aftergroup from listings configuration
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@175 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,7 @@
+2016-06-16  Michal Hoftich  <michal.h21@gmail.com>
+
+	* tex4ht-4ht.tex: Fixed lstinline configuration - spurious \aftergroup
+
 2016-06-15  Michal Hoftich  <michal.h21@gmail.com>
 
 	* tex4ht-html4.tex: Fixed configurations for algorithmic package -
