--- a/lit/tex4ht-4ht.tex
+++ b/lit/tex4ht-4ht.tex
@@ -27724,7 +27724,7 @@ content.
 \<listings sty\><<<
 \lst@AddToHook{TextStyle}{%
    \Configure{listings}{}{}{}{}%
-   \a:lstinline \bgroup \aftergroup\b:lstinline\aftergroup\egroup
+   \a:lstinline \bgroup \aftergroup\b:lstinline\egroup
   }
 \NewConfigure{lstinline}{2}
 >>>
