Added missing \par commands to chapters
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@177 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,5 +1,11 @@
 2016-06-16  Michal Hoftich  <michal.h21@gmail.com>
 
+	* tex4ht-html4.tex: added \par command to sectioning commands, there would
+	be text outside paragraphs otherwise
+	<https://puszcza.gnu.org.ua/bugs/?279>
+
+2016-06-16  Michal Hoftich  <michal.h21@gmail.com>
+
 	* tex4ht-4ht.tex: Replaced non-breaking space with normal spaces
 	<https://puszcza.gnu.org.ua/bugs/?316>
 
