Fixed ligatured hyphens in \ScriptEnv
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@178 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,9 @@
+2016-06-30  Michal Hoftich  <michal.h21@gmail.com>
+
+	* tex4ht-4ht.tex: added \hbox{} to actived hyphen in order to prevent
+	ligatures in environments defined with \ScriptEnv
+	<https://puszcza.gnu.org.ua/bugs/?319>
+
 2016-06-16  Michal Hoftich  <michal.h21@gmail.com>
 
 	* tex4ht-html4.tex: added \par command to sectioning commands, there would
