--- a/lit/tex4ht-4ht.tex
+++ b/lit/tex4ht-4ht.tex
@@ -477,16 +477,15 @@ to include the above (new) ``TeX4ht license text''.  I don't understand.
 
 \Link[/usr/local/teTeX/share/texmf/tex/latex/base/latex.ltx]{}{}latex.ltx\EndLink,
 
-\Link[http://ctan.tug.org/ctan/tex-archive/macros/latex/base/]{}{}latex
+\Link[http://ctan.org/tex-archive/macros/latex/base/]{}{}latex
 source components\EndLink
 
-\def\1.#1.{\Link[http://ctan.tug.org/ctan/tex-archive/macros/latex/base/#1.dtx]{}{}#1\EndLink}
+\def\1.#1.{\Link[http://ctan.org/tex-archive/macros/latex/base/#1.dtx]{}{}#1\EndLink}
 
 \<latex.4ht\><<<
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
-% latex.4ht                             |version %
-% Copyright (C) |CopyYear.1997.       Eitan M. Gurari         %
-|<TeX4ht copyright|>
+% latex.4ht (|version), generated from |jobname.tex
+% Copyright |CopyYear.1997. Eitan M. Gurari
+|<TeX4ht copywrite|>
 |<exit if already loaded|>
 |<early latex definitions|>
 |<latex changes for tex4ht.sty|>
