--- a/lit/tex4ht-4ht.tex
+++ b/lit/tex4ht-4ht.tex
@@ -435,10 +435,9 @@ to include the above (new) ``TeX4ht license text''.  I don't understand.
 >>>
 
 \<usepackage.4ht\><<<
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
-% usepackage.4ht                        |version %
-% Copyright (C) |CopyYear.2003.       Eitan M. Gurari         %
-|<TeX4ht copyright|>
+% usepackage.4ht (|version), generated from |jobname.tex
+% Copyright |CopyYear.2003. Eitan M. Gurari
+|<TeX4ht copywrite|>
    |<insert into latex|>
 \endinput
 >>>
@@ -26408,10 +26407,9 @@ with small  shifting.
 %%%%%%%%%%%%%%%%%%%%%%%%
 
 \<algorithmic.4ht\><<<
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
-% algorithmic.4ht                       |version %
-% Copyright (C) |CopyYear.2003.       Eitan M. Gurari         %
-|<TeX4ht copyright|>
+% algorithmic.4ht (|version), generated from |jobname.tex
+% Copyright |CopyYear.2003. Eitan M. Gurari
+|<TeX4ht copywrite|>
 |<algorithmic cfg|>
 \Hinput{algorithmic}
 \endinput
