--- a/lit/tex4ht-sty.tex
+++ b/lit/tex4ht-sty.tex
@@ -1,8 +1,8 @@
 % $Id$
 % tex tex4ht-sty   or   ht tex tex4ht-sty
 %
-% Copyright (C) 2009-2010 TeX Users Group
-% Copyright (C) 1996-2009 Eitan M. Gurari
+% Copyright 2009-2016 TeX Users Group
+% Copyright 1996-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
 
@@ -664,7 +664,8 @@ other usages).
 
 \<copyright\><<<
 % tex4ht.sty (|version), generated from |jobname.tex
-% Copyright (C) |CopyYear.1996. Eitan M. Gurari
+% Copyright 2009-|the|year|empty TeX Users Group
+% Copyright |CopyYear.1996. Eitan M. Gurari
 |<TeX4ht copywrite|>
 >>>
 
