lettrine: remove literal Agrave chars
git-svn-id: http://svn.gnu.org.ua/sources/tex4ht/trunk@181 b3dcb3a8-5acb-4090-8ad3-ac17c6a25672

--- a/lit/ChangeLog
+++ b/lit/ChangeLog
@@ -1,3 +1,8 @@
+2016-07-02  Karl Berry  <karl@freefriends.org>
+
+	* tex4ht-4ht.tex (lettrine.4ht): delete the .lettrine-Agrave css
+	with literal Agraves, to avoid encoding agony.  Update copyright.
+
 2016-07-01  Karl Berry  <karl@freefriends.org>
 
 	* tex4ht-sty.tex (tex4ht.sty),
