--- a/lit/tex4ht-4ht.tex
+++ b/lit/tex4ht-4ht.tex
@@ -29054,16 +29054,17 @@ of  \''<a>' elements.
 \append:def\endmulticols{\EndP\HCode{</div>}} 
 >>>
 
+\Section{lettrine.sty}
+
 % Lettrine
 \<lettrine.4ht\><<<
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% lettrine.4ht                             |version %
-|<TeX4ht copyright|>
+% lettrine.4ht (|version), generated from |jobname.tex
+% Copyright 2012-2016 TeX Users Group
+|<TeX4ht license text|>
 |<config lettrine|>
 \Hinput{lettrine}
 \endinput
 >>>                        \AddFile{2}{lettrine}
-
 
 \<config lettrine\><<<
 \NewConfigure{lettrine}{7}
@@ -29118,8 +29119,6 @@ of  \''<a>' elements.
 %
 \Css{.lettrine-A{margin-right: 0.3em;}}
 \Css{.lettrine-A + .lettrine-line{margin-left: -0.4em;}}
-\Css{.lettrine-\unexpanded{À}{margin-right: 0.3em;}}
-\Css{.lettrine-\unexpanded{À} + .lettrine-line{margin-left: -0.4em;}}
 \Css{.lettrine-J{line-height: 1; margin-right: 0;}}
 \Css{.lettrine-H, .lettrine-I, .lettrine-N, .lettrine-U{margin-right: 0;}}
 \Css{.lettrine-V{margin-right: -0.3em;}}
@@ -29128,7 +29127,6 @@ of  \''<a>' elements.
 \Css{.lettrine-line{font-variant: small-caps;}}
 \Css{p.indent{text-indent: 0em;}}
 >>>                 
-%-------------------------------- Baby osudeG.sty -------------
 
 \Section{osudeG.sty}
 
